--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         
         <style>
+            body {
+    background-image: url("images/greyman%20white.png");
+}
 h1 {text-align:center;}
 p {text-align:center;}
             html{text-align:center;}
